added git repo to axion scmversion

--- a/SpringRestApp/build.gradle
+++ b/SpringRestApp/build.gradle
@@ -36,6 +36,11 @@ scmVersion {
     tag {
         prefix = 'SpringRestApp'
     }
+    
+    repository {
+        type = 'git'
+        directory = project.rootProject.file('..') // repository location
+	}
 }
 
 project.version = scmVersion.version
